@@ -28,6 +28,11 @@ Version 1.8.4
 * When sending emails involving more than one CC recipient, the email
   sending may fail because a space wasn't put after each comma.
 
+* Created the Codestriker::Http::CreateTopic module which can create a
+  new topic non-interactively.  The intention is for this module to be
+  used from scripts that need to create new topics, for example, from
+  a CVS post-commit script.
+
 Version 1.8.3
 
 * It is now possible to specify multiple metrics associated with a
